# elevenlabs-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CONFIGURATION.md  CREWAI_INTEGRATION.md  Dockerfile  README.md  build.sh  deploy.sh  dev.sh  docker-compose.yml  install.py  install.sh  pyproject.toml  railway.toml  smithery.yaml
.github/workflows/: publish.yml  test.yml
11labs_mcp/: __init__.py  server.py
elevenlabs_mcp/: __init__.py  __main__.py  model.py  server.py  utils.py
tests/: test_utils.py
